--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body onload="startGame()">
     <br>
     <button onmousedown="startgame(-0.2)" onmouseup="startgame(0.05)" >StartGame</button>
-    <p>Holding Uppresskey to jump higher</p>
+    <p>Hold Uppresskey to jump higher</p>
     <script src="casestudy.js">
     </script>
 </body>
